@@ -1,14 +1,9 @@
 package com.qentelli.employeetrackingsystem.serviceImpl;
 
-import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.List;
-import java.util.stream.Collectors;
 
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import com.qentelli.employeetrackingsystem.entity.Project;
@@ -25,55 +20,45 @@ import lombok.RequiredArgsConstructor;
 @RequiredArgsConstructor
 public class WeeklySummaryService {
 
-	@Autowired
-	private WeeklySummaryRepository weeklySummaryRepository;
+	private static final String WEEKLY_SUMMARY_NOT_FOUND = "Weekly summary not found with id: ";
+	private static final String NO_PROJECTS_FOUND = "No projects found for given IDs";
+	private static final String WEEK = "WEEK";
 
-	@Autowired
-	private ProjectRepository projectRepository;
+	private final WeeklySummaryRepository weeklySummaryRepository;
+
+	private final ProjectRepository projectRepository;
 
 	public WeeklySummaryResponse createSummary(WeeklySummaryRequest request) {
-	    List<Project> projects = projectRepository.findAllById(request.getProjectIds());
-	    if (projects.isEmpty()) {
-	        throw new ResourceNotFoundException("No projects found for given IDs");
-	    }
+		List<Project> projects = projectRepository.findAllById(request.getProjectIds());
+		if (projects.isEmpty()) {
+			throw new ResourceNotFoundException(NO_PROJECTS_FOUND);
+		}
 
-	    // ✅ Format the week range label
-	    DateTimeFormatter formatter = DateTimeFormatter.ofPattern("dd-MMMM-yyyy");
-	    String weekRange = "WEEK: " + request.getWeekStartDate().format(formatter)
-	                     + " To " + request.getWeekEndDate().format(formatter);
+		WeeklySummary summary = new WeeklySummary();
+		summary.setWeekStartDate(request.getWeekStartDate());
+		summary.setWeekEndDate(request.getWeekEndDate());
+		summary.setUpcomingTasks(request.getUpcomingTasks());
+		summary.setListProject(projects);
+		summary.setCreatedAt(LocalDateTime.now());
 
-	    // ✅ Create and populate entity
-	    WeeklySummary summary = new WeeklySummary();
-	    summary.setWeekStartDate(request.getWeekStartDate());
-	    summary.setWeekEndDate(request.getWeekEndDate());
-	    summary.setUpcomingTasks(request.getUpcomingTasks());
-	    summary.setListProject(projects);
-	    summary.setWeekRange(weekRange); // 👈 Set the calculated value
-	    summary.setCreatedAt(LocalDateTime.now());
+		WeeklySummary savedSummary = weeklySummaryRepository.save(summary);
 
-	    // ✅ Save and build response
-	    WeeklySummary savedSummary = weeklySummaryRepository.save(summary);
+		WeeklySummaryResponse response = new WeeklySummaryResponse();
+		response.setWeekId(savedSummary.getWeekId());
+		response.setWeekStartDate(savedSummary.getWeekStartDate());
+		response.setWeekEndDate(savedSummary.getWeekEndDate());
+		response.setUpcomingTasks(savedSummary.getUpcomingTasks());
+		response.setProjectNames(savedSummary.getListProject().stream().map(Project::getProjectName).toList());
 
-	    WeeklySummaryResponse response = new WeeklySummaryResponse();
-	    response.setWeekId(savedSummary.getWeekId());
-	    response.setWeekStartDate(savedSummary.getWeekStartDate());
-	    response.setWeekEndDate(savedSummary.getWeekEndDate());
-	    response.setUpcomingTasks(savedSummary.getUpcomingTasks());
-	    response.setProjectNames(savedSummary.getListProject().stream()
-	                             .map(Project::getProjectName)
-	                             .toList());
-	    response.setWeekRange(savedSummary.getWeekRange()); // 👈 Return the same range
-
-	    return response;
+		return response;
 	}
-
 
 	public WeeklySummaryResponse getSummaryById(Integer weekId) {
 		WeeklySummary summary = weeklySummaryRepository.findById(weekId)
-				.orElseThrow(() -> new ResourceNotFoundException("Weekly summary not found with id: " + weekId));
+				.orElseThrow(() -> new ResourceNotFoundException(WEEKLY_SUMMARY_NOT_FOUND + weekId));
 
 		DateTimeFormatter formatter = DateTimeFormatter.ofPattern("dd-MMMM-yyyy");
-		String weekRange = "WEEK: " + summary.getWeekStartDate().format(formatter) + " To "
+		String weekRange = WEEK + summary.getWeekStartDate().format(formatter) + " To "
 				+ summary.getWeekEndDate().format(formatter);
 
 		WeeklySummaryResponse response = new WeeklySummaryResponse();
@@ -84,13 +69,10 @@ public class WeeklySummaryService {
 		response.setWeekRange(weekRange);
 		response.setProjectNames(summary.getListProject().stream().map(Project::getProjectName).toList());
 		return response;
-	} 
+	}
 
 	public List<WeeklySummaryResponse> getAllSummaries() {
 		List<WeeklySummary> summaries = weeklySummaryRepository.findAll();
-		System.out.println("Raw summaries count: " + summaries.size());
-		summaries.forEach(summary -> System.out.println("Week ID: " + summary.getWeekId()));
-		
 		return summaries.stream().map(summary -> {
 			WeeklySummaryResponse response = new WeeklySummaryResponse();
 			response.setWeekId(summary.getWeekId());
@@ -98,7 +80,7 @@ public class WeeklySummaryService {
 			response.setWeekEndDate(summary.getWeekEndDate());
 			response.setUpcomingTasks(summary.getUpcomingTasks());
 			response.setProjectNames(summary.getListProject().stream().map(Project::getProjectName).toList());
-			response.setWeekRange("WEEK: " + summary.getWeekStartDate() + " To " + summary.getWeekEndDate());
+			response.setWeekRange(WEEK + ":" + summary.getWeekStartDate() + " To " + summary.getWeekEndDate());
 			return response;
 		}).toList();
 	}
@@ -106,11 +88,11 @@ public class WeeklySummaryService {
 	public WeeklySummaryResponse updateSummary(WeeklySummaryRequest request) {
 		Integer weekId = request.getWeekId();
 		WeeklySummary summary = weeklySummaryRepository.findById(weekId)
-				.orElseThrow(() -> new ResourceNotFoundException("Weekly summary not found with id: " + weekId));
+				.orElseThrow(() -> new ResourceNotFoundException(WEEKLY_SUMMARY_NOT_FOUND + weekId));
 
 		List<Project> projects = projectRepository.findAllById(request.getProjectIds());
 		if (projects.isEmpty()) {
-			throw new ResourceNotFoundException("No projects found for given IDs");
+			throw new ResourceNotFoundException(NO_PROJECTS_FOUND);
 		}
 
 		summary.setWeekStartDate(request.getWeekStartDate());
@@ -125,15 +107,14 @@ public class WeeklySummaryService {
 		response.setWeekStartDate(updatedSummary.getWeekStartDate());
 		response.setWeekEndDate(updatedSummary.getWeekEndDate());
 		response.setUpcomingTasks(updatedSummary.getUpcomingTasks());
-		response.setProjectNames(
-				updatedSummary.getListProject().stream().map(Project::getProjectName).collect(Collectors.toList()));
+		response.setProjectNames(updatedSummary.getListProject().stream().map(Project::getProjectName).toList());
 		return response;
 	}
 
 	// SOFT DELETE
 	public WeeklySummary softDeleteSummery(Integer weekId) {
 		WeeklySummary weeklySummary = weeklySummaryRepository.findById(weekId)
-				.orElseThrow(() -> new ResourceNotFoundException("Weekly summary not found"));
+				.orElseThrow(() -> new ResourceNotFoundException(WEEKLY_SUMMARY_NOT_FOUND + weekId));
 		weeklySummary.setSoftDelete(true);
 		return weeklySummaryRepository.save(weeklySummary);
 	}
@@ -141,44 +122,23 @@ public class WeeklySummaryService {
 	// HARD DELETE
 	public void deleteSummary(Integer weekId) {
 		WeeklySummary summary = weeklySummaryRepository.findById(weekId)
-				.orElseThrow(() -> new ResourceNotFoundException("Weekly summary not found with id: " + weekId));
+				.orElseThrow(() -> new ResourceNotFoundException(WEEKLY_SUMMARY_NOT_FOUND + weekId));
 		weeklySummaryRepository.delete(summary);
 	}
 
-	public Page<WeeklySummaryResponse> getAllSummariesPaginated(Pageable pageable) {
-	    Page<WeeklySummary> summaries = weeklySummaryRepository.findAllBySoftDeleteFalse(pageable);
-
-	    return summaries.map(summary -> {
-	        WeeklySummaryResponse response = new WeeklySummaryResponse();
-	        response.setWeekId(summary.getWeekId());
-	        response.setWeekStartDate(summary.getWeekStartDate());
-	        response.setWeekEndDate(summary.getWeekEndDate());
-	        response.setUpcomingTasks(summary.getUpcomingTasks());
-	        response.setProjectNames(summary.getListProject().stream()
-	            .map(Project::getProjectName).toList());
-	        response.setWeekRange("WEEK: " + summary.getWeekStartDate() + " To " + summary.getWeekEndDate());
-	        return response;
-	    });
-	}
-	
-	// Get by start and end date	
-	public WeeklySummaryResponse getByStartAndEndDate(LocalDate start, LocalDate end) {
-	    WeeklySummary summary = weeklySummaryRepository
-	        .findByWeekStartDateAndWeekEndDate(start, end)
-	        .orElseThrow(() -> new ResourceNotFoundException("Week range not found"));
-
-	    WeeklySummaryResponse response = new WeeklySummaryResponse();
-	    response.setWeekId(summary.getWeekId());
-	    response.setWeekStartDate(summary.getWeekStartDate());
-	    response.setWeekEndDate(summary.getWeekEndDate());
-	    response.setUpcomingTasks(summary.getUpcomingTasks());
-	    response.setProjectNames(
-	        summary.getListProject().stream()
-	            .map(Project::getProjectName)
-	            .toList()
-	    );
-	    response.setWeekRange(summary.getWeekRange());
-	    return response;
+	public List<WeeklySummaryResponse> getFormattedWeekRanges() {
+		List<WeeklySummary> summaries = weeklySummaryRepository.findAll();
+		DateTimeFormatter formatter = DateTimeFormatter.ofPattern("dd-MMMM-yyyy");
+		return summaries.stream().map(summary -> {
+			String range = WEEK + ":" + summary.getWeekStartDate().format(formatter) + " To "
+					+ summary.getWeekEndDate().format(formatter);
+			WeeklySummaryResponse res = new WeeklySummaryResponse();
+			res.setWeekId(summary.getWeekId());
+			res.setWeekRange(range);
+			res.setWeekStartDate(summary.getWeekStartDate());
+			res.setWeekEndDate(summary.getWeekEndDate());
+			return res;
+		}).toList();
 	}
 
-	}
+}
